--- a/blog-client/public/index.html
+++ b/blog-client/public/index.html
@@ -1,4 +1,4 @@
-<!-- Copyright (C) Yancey Inc. All rights reserved. -->
+<!-- Copyright (C) 巡礼者 Inc. All rights reserved. -->
 <!DOCTYPE html>
 <!--
           ┏┓　　　┏┓+ +
@@ -31,7 +31,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, shrink-to-fit=no, user-scalable=0">
   <meta name="theme-color" content="#000000">
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
-  <title>Yancey Official Blog</title>
+  <title>巡礼者 Official Blog</title>
 </head>
 
 <body>
